<resources>
    <string name="app_name">Globus Manager</string>
    <string name="app_finish_info">Выход из программы</string>
    <string name="app_finish_confirm">Вы уверены, что хотите выйти из программы?</string>

    <string name="authenticator_label">Globus Manager</string>

    <string name="register_header">Регистрация</string>
    <string name="register_login">Номер телефона</string>
    <string name="register_login_info">Введите номер телефона</string>
    <string name="register_login_text_default">+375</string>
    <string name="register_login_empty">Поле не может быть пустым</string>
    <string name="register_do">Зарегистрировать</string>
    <string name="register_account_already_exists">Аккаунт с таким номером уже существует</string>

    <string name="synchronize_header">Синхронизация данных</string>
    <string name="synchronize_title_before">Для продолжения запустите синхронизацию данных</string>
    <string name="synchronize_info_before">Нажмите на кнопку\nпо середине экрана</string>
    <string name="synchronize_title_after">Ожидайте, идет синхронизация данных…</string>
    <string name="synchronize_info_after">Для операции необходимо подключение к интернету</string>
    <string name="synchronize_do">Синхронизировать данные</string>
    <string name="synchronize_start_hint">Синхронизация данных запущена</string>
    <string name="synchronize_stop_hint">Синхронизация данных остановлена</string>
    <string name="synchronize_success_hint">Синхронизация данных успешно заверешена</string>
    <string name="synchronize_fail_hint">Синхронизация данных не заверешена. Повторите попытку.</string>
    <string name="synchronize_wait_hint">Ожидайте завершения операции</string>
    <string name="synchronize_break_info">Синхронизация данных еще не завершена</string>
    <string name="synchronize_break_confirm">Вы уверены, что хотите прервать текущую операцию?</string>
    <string name="synchronize_notify_title">Синхронизация данных</string>
    <string name="synchronize_notify_start">Инициализация…</string>
    <string name="synchronize_notify_step1">Идет загрузка контактных данных…</string>
    <string name="synchronize_notify_step2">Идет загрузка сообщений…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="main_menu_action_sync">Синхронизировать данные</string>
    <string name="main_menu_action_settings">Настройки</string>

    <string name="popup_menu_message_send_action_clear">Очистить вложения</string>

    <string name="menu_main">Главная</string>
    <string name="menu_main_control">Контрольные сообщения</string>
    <string name="menu_main_messages">Сообщения</string>
    <string name="menu_main_messages_new">Получены новые сообщения</string>
    <string name="menu_main_messages_enter">Напишите сообщение…</string>

    <string name="menu_instructions">Инструкции</string>

    <string name="menu_contacts">Контакты</string>
    <string name="menu_contacts_faces">Контакты</string>
    <string name="menu_contacts_groups">Группы</string>

    <string name="menu_tools">Утилиты</string>

    <string name="menu_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="settings_theme_header">Темы оформления</string>
    <string name="settings_theme_dialog">Выберите тему оформления</string>
    <string name="settings_theme_classic_name">Классическая</string>
    <string name="settings_theme_dark_name">Тёмная</string>
    <string name="settings_theme_default_name">По умолчанию</string>
    <string name="settings_theme_set">Установлена тема оформления</string>

    <string name="menu_info">Справка</string>

    <string name="alert_action_yes">Да</string>
    <string name="alert_action_no">Нет</string>
</resources>
